--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a class="nav-link " href="#">Home</a>
                 <a class="nav-link " href="#">Key Features</a>
                 <a class="nav-link " href="#">Pricing</a>
-                <a class="nav-link " href="#">Terminal</a>
+                <a class="nav-link " href="#">Testiminal</a>
                 <a class="nav-link " href="#">FAQ</a>
                 <button id="btn-try" class=" btn btn-primary">Try for Free</button>
               </div>
@@ -40,8 +40,8 @@
         <div class="row">
           <div id="h1-img" class="col-6 col-md-6">
             <img src="/img/_1 Editiors Choice App of 2020.png" width="400" alt="editiorsChoice">
-            <h1>Melhor aplicativo para o seu estilo de vida moderno</h1>
-            <h5>Aumentar a produtividade com uma tarefa simples. App para gerenciar seus orçamentos pessoais.</h5>
+            <h1>Best app for your modern lifestyle</h1>
+            <h5>Increase productivity with a simple to-do app. app for managing your personal budgets</h5>
             <button id="btn-try2" class="btn btn-primary">Try for Free</button>
             <a href="#">Watch demo video</a>
           </div>
@@ -53,8 +53,20 @@
     </div>
   </section>
 
-  <section>
+  <section id="terceira-parte">
+    <div class="container">
+      <div class="row">
+        <div class="col-6 col-md-6">
+          <img src="/img/Vector Smart Object3.png" alt="third-person">
+        </div>
 
+        <div class="col-6 col-md-6">
+          <h2>Designed & built by the latest code integration</h2>
+          <h5>The rise of mobile devices transforms the way we consume information entirely and the world's mos elevant channels shuch as Facebook</h5>
+          <button class="btn btn-primary">Learn more</button>
+        </div>
+      </div>
+    </div>
   </section>
         
           
